[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://Player/HUD/mousehead.png" type="Texture" id=2]
[ext_resource path="res://Player/HUD/cathead.png" type="Texture" id=3]
[ext_resource path="res://addons/radial_progress/RadialProgressBar.gd" type="Script" id=4]
[ext_resource path="res://Common/Doors/Keys/GoldKey.png" type="Texture" id=5]
[ext_resource path="res://Common/coralines-cat.regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 10
font_data = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HUDPanel" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 46.0
color = Color( 0, 0, 0, 0.588235 )

[node name="CatStamBar" type="Control" parent="HUDPanel"]
margin_left = 56.0
margin_top = 46.0
margin_right = 96.0
margin_bottom = 86.0
script = ExtResource( 4 )
radius = 35
progress = 20
bg_color = Color( 0.501961, 0.501961, 0.501961, 0 )
bar_color = Color( 0, 0.203922, 1, 1 )

[node name="CatLifeBar" type="Control" parent="HUDPanel"]
margin_left = 56.0
margin_top = 46.0
margin_right = 96.0
margin_bottom = 86.0
script = ExtResource( 4 )
max_value = 7
radius = 30
progress = 7
bg_color = Color( 0.501961, 0.501961, 0.501961, 0 )
bar_color = Color( 1, 0, 0, 1 )

[node name="CatStat" type="Sprite" parent="HUDPanel"]
position = Vector2( 56, 40 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="MiceStat" type="Sprite" parent="HUDPanel"]
position = Vector2( 280, 40 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )

[node name="MiceCounter" type="Label" parent="HUDPanel/MiceStat"]
margin_left = -32.0
margin_top = -32.0
margin_right = -8.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 3 )
text = "7"

[node name="MiceLeft" type="Label" parent="HUDPanel/MiceStat"]
margin_left = -32.0
margin_top = 16.0
margin_right = -8.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "7"

[node name="LvlCounter" type="Label" parent="HUDPanel"]
margin_right = 24.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 4 )
text = "7"

[node name="Message" type="Label" parent="HUDPanel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -384.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 4 )
autowrap = true

[node name="Keys" type="Sprite" parent="HUDPanel"]
position = Vector2( 344, 40 )
scale = Vector2( 0.781249, 0.75 )
texture = ExtResource( 5 )

[node name="KeysCounter" type="Label" parent="HUDPanel/Keys"]
margin_left = 8.0
margin_right = 32.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
text = "7"

[node name="ScaleTimer" type="Timer" parent="."]

[connection signal="timeout" from="ScaleTimer" to="." method="_on_ScaleTimer_timeout"]
